# HPeC-sources

./: .gitignore  README.md
adaptation_manager/: CMakeLists.txt  package.xml
adaptation_manager/launch/: adaptation_manager.launch
adaptation_manager/src/: Makefile  _main.c  _main.h  adaptation_manager_node.cpp  adaptation_manager_node.h  adaptation_manager_struct.cpp  adaptation_manager_struct.h  am_defines.h  call.c  call.h  fpga_header.h  handle_applications.cpp  handle_applications.h  initimg.cpp  initimg.h  main.c  main.h  main_controller.c  main_controller.h  main_controller_types.c  main_controller_types.h  main_types.c  main_types.h  readme  reconfig.cpp  reconfig.h  reconfiguration_automate.cpp  reconfiguration_automate.h  utils.cpp  utils.h
communication/: CMakeLists.txt  package.xml
communication/msg/: area_location.msg  fake_sensors_msg.msg  goalGPSList_msg.msg  goalGPS_msg.msg  nav_control.msg  obstacle_detection_msg.msg  path_msg.msg
cpu_sensor/: CMakeLists.txt  package.xml
cpu_sensor/launch/: cpu_sensor.launch
cpu_sensor/src/: cpu_sensor_node.cpp
detection_tracking/: CMakeLists.txt  package.xml
detection_tracking/launch/: ros_detection_tracking.launch  ros_tld_gui.launch  ros_tld_tracker.launch
detection_tracking/src/: base_frame_graphics_view.cpp  detection_tracking_node.cpp  detection_tracking_node.hpp  main.cpp  main.hpp  utils.cpp
doc/: LICENCE
drone_move_planner/: CMakeLists.txt  custom_rosconsole.conf  package.xml
drone_move_planner/launch/: drone_move_planner.launch
drone_move_planner/src/: LatLong-UTMconversion.cpp  LatLong-UTMconversion.h  constants.h  droneMovePlannerClass.cpp  droneMovePlannerClass.h  drone_move_planner_node.cpp  px4_comm_class.cpp  px4_comm_class.h
emergency_landing/: CMakeLists.txt  package.xml
emergency_landing/src/: canny.c  cca.c  cca.h  cordic_atan.h  csr_map.h  emergency_landing_node.cpp  emergency_landing_node.cpp.1  emergency_landing_node.cpp.correct.2  emergency_landing_node.cpp.correct.nano  emergency_landing_node.h  gaussianfilter.c  gaussianfilter.h  histequalization.c  histequalization.h  hough.c  hough.h  image.c  image.h  main.c  moments.c  moments.h  sgdma_dispatcher.cpp  sgdma_dispatcher_regs.h  simple_dma.c  simple_dma.h  sobel.h  zone.c
fake_sensors/: CMakeLists.txt  package.xml
fake_sensors/src/: fake_sensors_class.cpp  fake_sensors_class.h  fake_sensors_node.cpp
gazebo_light_sensor_plugin/: package.xml
gazebo_light_sensor_plugin/src/: light_sensor_plugin.cpp
gazebo_plugin/: CMakeLists.txt  package.xml
gazebo_plugin/src/: gazebo_world_plugin.cpp
gazebo_target_plugin/: CMakeLists.txt  package.xml
gazebo_target_plugin/src/: set_target_path.cpp  set_target_path.hpp
generic_task_wrapper/: CMakeLists.txt  package.xml
generic_task_wrapper/launch/: emergency_landing.launch
generic_task_wrapper/src/: canny.h  cca.c  cca.h  cordic_atan.c  generic_task_wrapper_node.cpp  image.c  image.h  median.c  morpho.c  morpho.h  sobel.c  threshold.c  threshold.h  zone.h
harris_detector/: CMakeLists.txt  package.xml
harris_detector/src/: RST_Ransac.c  csr_map.cpp  freak.c  freak.h  gaussianfilter.c  gaussianfilter.h  harris.c  harris.h  harris_detector_node.cpp  harris_detector_node.hpp  image.c  image.h  median.h  nms.c  nms.h  sgdma_dispatcher.h  sobel.c  sobel.h
ipc_node_test/: CMakeLists.txt  package.xml
ipc_node_test/src/: debug.c  ipc_node_test.cpp
libopentld/: CMakeLists.txt  package.xml
libopentld/mftracker/: BBPredict.cpp
libopentld/src/libopentld/: CMakeLists.txt  CMakeLists.txt.orig
libopentld/src/libopentld/tld/: TLD.cpp
libopentld/src/opentld/: CMakeLists.txt
libopentld/tld/: Clustering.h  DetectorCascade.cpp  ForegroundDetector.cpp  ForegroundDetector.h  TLD.cpp  TLDUtil.cpp  TLDUtil.h
mission_manager/: CMakeLists.txt  package.xml
mission_manager/launch/: mission_manager.launch
mission_manager/src/: mdp_global.cpp  mdp_global.hpp  mission_manager_node.cpp  mission_manager_node.hpp  pixel_to_xy_gps_position.cpp  pixel_to_xy_gps_position.hpp  policy_iteration.cpp  tb_mdp_global.cpp  tb_mdp_global.hpp
mybot_gazebo/launch/: nodes+gazebo.launch  run_master_gazebo.launch  sockit_hpec.launch  test.launch
mybot_gazebo/worlds/: HPeC_sandbox.world  HPeC_scenario_1.world  THEWORLD.world  mybot.world
navigation/: CMakeLists.txt  package.xml
navigation/src/: nav_command.cpp  nav_command.hpp  navigation_node.cpp  navigation_node.h  navigation_node.hpp  pixel_to_xy_gps_position.cpp  pixel_to_xy_gps_position.hpp
obstacle_detection/: CMakeLists.txt  package.xml
obstacle_detection/launch/: obstacle_detection.launch
obstacle_detection/src/: obstacle_detection_class.cpp  obstacle_detection_class.h  obstacle_detection_node.cpp  taf.cpp  taf.h  utils.h
parameters/: CMakeLists.txt  achievable_tab.txt  camera_features.yaml  cpu.txt  done.txt  drone_features.yaml  map_tab.txt  mapping_table.txt  mdp_prob_vector.txt  mdp_reward_vector.txt  new_trump_model  node_activation_rates.yaml  obstacle_detection_parameters.yaml  package.xml  release_hw.txt  system_state.yaml  tableC3(1).txt  tableC3(2).txt  tableC3.txt  test_model_hanouna  time_qos_task (s_l).txt  time_qos_task.txt  trump_track_model
parameters/mav_proxy_scripts/: mavProxy_failures_test.py  mavProxy_read_params.py  mavProxy_serial.py  mavProxy_set_normal_conf.py  mavTest.py
px4_comm/: CMakeLists.txt  package.xml
px4_comm/launch/: px4_comm.launch
px4_comm/src/: LatLong-UTMconversion.cpp  px4_comm_class.cpp  px4_comm_node_copter.cpp
reconfig_test/: CMakeLists.txt  package.xml
reconfig_test/src/: debug.h  pr_internal_host.c  pr_internal_host.h  reconfig_test.cpp  reconfig_test.h
rosnode_model/: CMakeLists.txt  package.xml
rosnode_model/src/: rosnode_model.cpp  rosnode_model.h
scripts/: run_nodes_gazebo.sh  run_server_gazebo.sh
shared_memory_lib/: CMakeLists.txt  package.xml
shared_memory_lib/src/: CommShMemConst.hpp  CommSharedMemory.cpp  CommSharedMemory.hpp  comm_shared_memory.cpp  comm_shared_memory.hpp  comm_shmem_const.hpp
stabilisation_imu/: CMakeLists.txt  package.xml
(+47 files in other folders)
